# photo-to-scan

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  docprep.py  pyproject.toml
app/: cleanup.py  config.py  main.py  processing.py  rendering.py  sessions.py
app/routes/: assemble.py  images.py  pages.py  pages_mgmt.py  process.py  rotate.py  submit.py  upload.py
app/templates/: index.html
docprep/: __init__.py  cli.py  debug.py  deskew.py  scan.py
tests/: conftest.py  test_assemble.py  test_cleanup.py  test_health.py  test_images.py  test_pages.py  test_pages_mgmt.py  test_process.py  test_submit.py  test_ui.py  test_upload.py
